[package]
name = "hashlog"
description = "Track and verify MD5/SHA1/SHA256 hashes of files"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
digest = "0.10.7"
dirs = "6.0.0"
hostname = "0.4.1"
md5 = "0.8.0"
rusqlite = "0.37.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
walkdir = "2.5.0"
